@@ -1,6 +1,8 @@
 ubuntu-dev-tools (0.132) UNRELEASED; urgency=low
 
-  * sponsor-patch: Refactor code.
+  * sponsor-patch:
+    - Refactor code.
+    - Support sync requests and make ack-sync obsolete (LP: #764763).
 
  -- Benjamin Drung <bdrung@debian.org>  Sat, 10 Sep 2011 19:58:38 +0200
 
